unpackaged/main/default/objects/Related_Product__c/Related_Product__c.object-meta.xml
<CustomObject>
    <label>Related Product</label>
    <nameField>
        <displayFormat>RP {0000000}</displayFormat>
        <label>Related Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>