unpackaged/main/default/objects/Related_Product__c/fields/Parent_Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Object__c</fullName>
    <description>Used to avoid having to create this formula/filter.</description>
    <formula>IF(NOT(ISBLANK( Regime__c)), "Regime",

IF(NOT(ISBLANK( Prescription__c)), "Prescription",

IF(NOT(ISBLANK( Patient_Order__c)), "Patient Order",

"One and only one field should be populated from the following: Regime, Prescription, Patient Order. Please review to allow this field to function"

)))</formula>
    <inlineHelpText>This field should read either 'Regime', 'Prescription' or 'Patient Order' - based on which has been populated.</inlineHelpText>
    <label>Parent Record Object</label>
    <type>Text</type>
</CustomField>