unpackaged/main/default/objects/Related_Product__c/fields/Patient_Order__c.field-meta.xml
<CustomField>
    <fullName>Patient_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Order</label>
    <referenceTo>Patient_Order__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>