unpackaged/main/default/objects/Related_Product__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription</label>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>