unpackaged/main/default/objects/Related_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Price_Book_Listing__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>RelatedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>