unpackaged/main/default/objects/Related_Product__c/fields/Product_Name_Text_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Text_Display__c</fullName>
    <formula>Product__r.Product__r.Name</formula>
    <label>Product Name Text Display</label>
    <type>Text</type>
</CustomField>