unpackaged/main/default/objects/Related_Product__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>