unpackaged/main/default/objects/Related_Product__c/fields/Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity__c</fullName>
    <inlineHelpText>How many, if any, of this item requested for the Prescription were received? If this item was not requested in the Prescription but will be kept, please enter the 'Quantity' as 0 and the 'Received Quantity' as the amount that has been prescribed.</inlineHelpText>
    <label>Received Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>