unpackaged/main/default/objects/Related_Product__c/fields/Regime__c.field-meta.xml
<CustomField>
    <fullName>Regime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regime</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Regime__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Regime__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>