unpackaged/main/default/objects/Related_Product__c/fields/Regime_Product__c.field-meta.xml
<CustomField>
    <fullName>Regime_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Prescription/Patient Order Related Products, a before-save flow checks for if the same Product is available on the patient's Regime</description>
    <label>Regime Product?</label>
    <type>Checkbox</type>
</CustomField>