unpackaged/main/default/objects/Related_Product__c/fields/Related_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Name__c</fullName>
    <description>Field used to display a clickable link to the Related Product whilst displaying the Product name, to improve UX and avoid having to display both the Related Product Number + Product Name.</description>
    <formula>HYPERLINK(

"https://vitaflo.lightning.force.com/lightning/r/Related_Product__c/" &amp;

Id &amp;

"/view",

Product__r.Product__r.Name, 

"_self" )</formula>
    <label>Related Product Name</label>
    <type>Text</type>
</CustomField>