unpackaged/main/default/objects/Related_Product__c/recordTypes/Live_Related_Product.recordType-meta.xml
<RecordType>
    <fullName>Live_Related_Product</fullName>
    <active>true</active>
    <description>Used for after a record has been created and saved</description>
    <label>Live Related Product</label>
</RecordType>