unpackaged/main/default/objects/Related_Product__c/recordTypes/New_Related_Product.recordType-meta.xml
<RecordType>
    <fullName>New_Related_Product</fullName>
    <active>true</active>
    <description>Used for when users initially create the record</description>
    <label>New Related Product</label>
</RecordType>