unpackaged/main/default/objects/Related_Product__c/validationRules/Record_Must_Have_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Must_Have_Parent</fullName>
    <active>true</active>
    <description>Ensures one of the Regime/Prescription/Patient Order fields are populated. **The "Patient Name" and "Patient" formula fields rely on this validation rule being active**</description>
    <errorConditionFormula>AND(ISBLANK(Regime__c),
ISBLANK(Prescription__c),
ISBLANK(Patient_Order__c))</errorConditionFormula>
    <errorMessage>Please populate either the Regime, Patient Order or Prescription lookup. (Only one of the three)</errorMessage>
</ValidationRule>