unpackaged/main/default/objects/Related_Product__c/listViews/Dynamic_Prescription_List_View.listView-meta.xml
<ListView>
    <fullName>Dynamic_Prescription_List_View</fullName>
    <columns>NAME</columns>
    <columns>Prescription__c</columns>
    <columns>Product_Name_Text_Display__c</columns>
    <columns>Quantity__c</columns>
    <columns>Received_Quantity__c</columns>
    <columns>Product_Prescribed_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prescription__c</field>
        <operation>equals</operation>
        <value>P 00004</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Related_Product__c.Live_Related_Product</value>
    </filters>
    <label>Dynamic Prescription List View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>